styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@media screen and (max-width:600px) {
  .everythingInMain{
      font-size: .8em;
      transform: scale(.8);
  }
}


.bold{
  font-weight: bold;
}
.lighter{
  font-weight: lighter;
}
/* .smaller{
  font-size: 80%;
} */

button{
  width: 90%;
  margin: auto;
  max-width: 22em;

  position: relative;
  padding: 2em;
  box-sizing: border-box;

  $border: 5px;
  color: #FFF;
  background: rgb(2, 9, 22);
  background-clip: padding-box; /* !importanté */
  border: solid $border transparent; /* !importanté */
  border-radius: 1em;
  cursor: pointer;

  &:before {
    content: '';
    position: absolute;
    top: 0; right: 0; bottom: 0; left: 0;
    z-index: -1;
    margin: -$border; /* !importanté */
    border-radius: 11%; /* !importanté */
    background: linear-gradient(to right, rgba(172, 55, 86, 0.382),#a4a3ab88);
  }

}

/* CSS */
.button-64 {
  align-items: center;
background-color: rgba(0, 0, 0, 0);
  border: solid rgba(0, 0, 0, 0);
  border-radius: 8px;
  box-shadow: rgba(172,55,87,255) 0 15px 10px -5px;
  box-sizing: border-box;
  /* color: #FFFFFF; */
  display: flex;
  font-family: Phantomsans, sans-serif;
  font-size: 20px;
  justify-content: center;
  line-height: 1em;
  max-width: 100%;
  min-width: 140px;
  max-height:2em;
  padding: 3px;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  white-space: nowrap;
  cursor: pointer;
}

h3{max-width: 40ch;}


@media (min-width: 768px) {
  .button-64 {
    font-size: 24px;
    min-width: 196px;
  }
}


.flex{
  display: flex;
  flex-direction:row;
  
}

.invisible{
  visibility: hidden;
}

.icon{
  height: 2em;
  width: 2em;
  margin:auto;
  padding: 5px;
  /* background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB); */
  border-radius: 10px;
  cursor: pointer;
}


.right{
  position: absolute;
  top: 1em;
  right: 2em;
}

.blue{
  color:rgb(104, 112, 218)
}
html {

  font-family: Georgia, 'Times New Roman', Times, serif;  
}
.slightlySmallerText{
  font-size:small;
}

:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;

  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;

  --primary-glow: conic-gradient(
    from 180deg at 50% 50%,
    #16abff33 0deg,
    #0885ff33 55deg,
    #54d6ff33 120deg,
    #0071ff33 160deg,
    transparent 360deg
  );
  --secondary-glow: radial-gradient(
    rgba(255, 255, 255, 1),
    rgba(255, 255, 255, 0)
  );

  --tile-start-rgb: 239, 245, 249;
  --tile-end-rgb: 228, 232, 233;
  --tile-border: conic-gradient(
    #00000080,
    #00000040,
    #00000030,
    #00000020,
    #00000010,
    #00000010,
    #00000080
  );

  --callout-rgb: 238, 240, 241;
  --callout-border-rgb: 172, 175, 176;
  --card-rgb: 180, 185, 188;
  --card-border-rgb: 131, 134, 135;
}

.flex-box{
  display: flexbox;
  flex-wrap: wrap;
}
.border{
  border: red solid 
}


.whiteText{
  color:#afa4a1ec}

.transitionCenter{
  transform: translate(44%);
}

.center{
  margin-left: auto;
  margin-right: auto;
  justify-content: center;
}

.updatedCenter{
  margin-left: 40%;
  justify-content: center;
}
.centerPrice{
  margin-left: 38%;
  justify-content: center;
}
/* @media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;

    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
    --secondary-glow: linear-gradient(
      to bottom right,
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0),
      rgba(1, 65, 255, 0.3)
    );

    --tile-start-rgb: 2, 13, 46;
    --tile-end-rgb: 2, 5, 19;
    --tile-border: conic-gradient(
      #ffffff80,
      #ffffff40,
      #ffffff30,
      #ffffff20,
      #ffffff10,
      #ffffff10,
      #ffffff80
    );

    --callout-rgb: 20, 20, 20;
    --callout-border-rgb: 108, 108, 108;
    --card-rgb: 100, 100, 100;
    --card-border-rgb: 200, 200, 200;
  }
} */

.drawAttention{
  animation: flux 12s infinite;
}

@keyframes flux {
 0% {scale: 1;}
 50%{scale: 1; color: white;}
 75%{scale: 1.1; color: rgba(245, 177, 177, 0.786)}
 100%{scale: 1; color: white}
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}
/* 
body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
} */

a {
  color: inherit;
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
} 

body{
  background-image:
  linear-gradient(
    rgba(3,14,34,255),
    black

  )
}

.smallerContainer{
  width: 50%;
  height: 25%;
}

.justCenter{
  justify-content: center;
}

.smaller{
  font-size: small;
}


.bigger{
  font-size:55px;
  font-weight:1000;
}

.big{
  font-size: 35px;
}


.marginPastHeader{
  margin-top:  6em;
}



.blur{
  // this isn't needed anymore, decided to do a backdrop-filter after I learned about it. Didn't have need for the useContext anymore.
}

.modalBackground{
  position: fixed;
  margin-top:-7em;
  margin-left: -1em;
  height: 120%;
  width: 110%;
  z-index: 1;
  backdrop-filter:  blur(.25em) brightness(70%);
  // filter: brightness(70%)
}

.modalBorder{
  position:fixed;

  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
background-color: rgba(2,12,29);
height: 75vh;
width: 75vh;
padding: 10px;
border-radius: 10%;
text-align: center;
overflow-y: scroll;
overflow-x: hidden;
}


.modal{
  text-align: left;
  background-color: white;
  height: 80%;
  width: 90%;
  margin: auto;
}

.centerText{
  margin:auto;  
  text-align:center;
}

// Everything for my switch

.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #bad7eb;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}


input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}


.exitButton{
  cursor: pointer;
  text-align: right;
  width: fit-content;
  float: right;
}


input[type=submit] {
  color: rgba(2,12,29);
  	font-size: 1.5em;
	display: inline-block;
	font-family: Montserrat;
	text-transform: uppercase;
  border-radius: 5%;
  cursor: pointer;
}



.red{
  color:rgb(255, 0, 0)
}




.notthis{
  margin: auto;
}
.notthisgdSoG{
  margin: auto;
}


.hugeText{
  font-size:4em;
  font-weight: 900;
  color: green;
}



svg{
  position: absolute;
  top:0;
  left:0;
  height: 100vh;
  width: 100%;
}

#impresarioTitle{
  font-size: 120px;
  letter-spacing: 16px;
  text-transform: uppercase;
  font-family: Raleway;
  text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);

}

#bg-video{
  margin:-200px auto;
  overflow: hidden;
  width: 100%; 
  height: 100vh; 
  scale: 1.4;
  
}
#impresarioSubTitle{
  font-size: 60px;
  font-family: Raleway;
  text-shadow: 7px 7px 7px rgba(0, 0, 0, 0.2);
}
.pxSpacer{
  height: 250px;
}


#mask-bg{
  mask:url("#mask");
  fill:rgb(255, 255, 255);
  y:15%;

  
}

#siteIntroductoryStatement{
  font-size: 2.5em;
  font-family: Raleway;
}
.findOutMoreButton{
  top:65%;
  left: 60%;
  transform: translate(-50%);
  z-index: 2;
  position: absolute;
}

@media (max-width: 768px) {
  /* CSS styles for phone-sized screens */
  #impresarioTitle {
    font-size: 40px; /* Adjust the font size for smaller screens */
    letter-spacing: 6px; /* Adjust the letter-spacing for smaller screens */
 text-shadow: 3px 3px 3px rgba(0, 0, 0, .2);  
}
  #impresarioSubTitle {
    font-size: 20px; /* Adjust the font size for smaller screens */
 text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
  }
  #siteIntroductoryStatement{
    font-size: .9em;
  }
  #myIntroPhoto{
    scale: .6;
    transform: translate(65%, 25%);
  }
  .theTextForLandingPage{
    scale:.7;
    transform: translate(15%,40%);

  }
  .findOutMoreButton{
    scale:.6;
    transform: translate(-99%,150%);
  }
.goLeftPhone{
  margin-left: -34px;
}

}

